# percival-khan-calendar

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/percival_khan_calendar/: __init__.py  constants.py  exceptions.py  lifecycle.py  models.py  security.py  server.py
src/percival_khan_calendar/adapters/: __init__.py  khal_adapter.py  locks.py  subprocess_runner.py
src/percival_khan_calendar/resources/: __init__.py  docs.py
src/percival_khan_calendar/tools/: __init__.py  create_event.py  delete_event.py  list_events.py  prompts.py  status.py  update_event.py  view.py
tests/: _helpers.py  conftest.py  test_exceptions.py  test_fuzz.py  test_integration_khal_subprocess.py  test_khal_adapter.py  test_lifecycle.py  test_locks.py  test_models.py  test_prompts_and_resources.py  test_security.py  test_security_round2.py  test_security_round3.py  test_security_round4.py  test_security_round6.py  test_subprocess_runner.py  test_tools_create.py  test_tools_delete.py  test_tools_list.py  test_tools_status.py  test_tools_update.py  test_tools_view.py
