[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "percival-khan-calendar"
version = "0.2.0"
description = "Percival MCP server for local calendar management via khal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.12.0",
    "fastmcp>=3.2.0",
    "khal>=0.11.3",
    "icalendar>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/bill-kopp-ai-dev/percival.OS"
Issues = "https://github.com/bill-kopp-ai-dev/percival.OS/issues"

[project.scripts]
percival-khan-calendar = "percival_khan_calendar.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/percival_khan_calendar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
