[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "percival-khan-calendar"
version = "0.2.0"
description = "Percival MCP server for local calendar management via khal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.12.0",
    "fastmcp>=3.2.0",
    "khal>=0.11.3",
    "icalendar>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
]

[project.urls]
Homepage = "https://github.com/bill-kopp-ai-dev/percival.OS"
Issues = "https://github.com/bill-kopp-ai-dev/percival.OS/issues"

[project.scripts]
percival-khan-calendar = "percival_khan_calendar.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/percival_khan_calendar"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src/percival_khan_calendar",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "integration: requires khal binary and writable workspace",
]

[tool.coverage.run]
branch = true
source = ["src/percival_khan_calendar"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
